// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton component should display a single option with a checkbox parameter 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="action-button-4"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                <span
                  id="action-button-4-tooltip-target"
                />
                <div>
                  <i
                    class="material-icons mr-2"
                  >
                    refresh
                  </i>
                   Little action
                </div>
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-4"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-4-tooltip-target"
              />
              <div>
                <i
                  class="material-icons mr-2"
                >
                  refresh
                </i>
                 Little action
              </div>
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ActionButton component should display a single option with a number parameter 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="action-button-3"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                <span
                  id="action-button-3-tooltip-target"
                />
                <div>
                  <i
                    class="material-icons mr-2"
                  >
                    refresh
                  </i>
                   Little action
                </div>
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-3"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-3-tooltip-target"
              />
              <div>
                <i
                  class="material-icons mr-2"
                >
                  refresh
                </i>
                 Little action
              </div>
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ActionButton component should display a single option with a select parameter 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="action-button-5"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                <span
                  id="action-button-5-tooltip-target"
                />
                <div>
                  <i
                    class="material-icons mr-2"
                  >
                    refresh
                  </i>
                   Little action
                </div>
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-5"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-5-tooltip-target"
              />
              <div>
                <i
                  class="material-icons mr-2"
                >
                  refresh
                </i>
                 Little action
              </div>
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ActionButton component should display a single option with a text parameter 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="action-button-2"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                <span
                  id="action-button-2-tooltip-target"
                />
                <div>
                  <i
                    class="material-icons mr-2"
                  >
                    refresh
                  </i>
                   Little action
                </div>
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-2"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-2-tooltip-target"
              />
              <div>
                <i
                  class="material-icons mr-2"
                >
                  refresh
                </i>
                 Little action
              </div>
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ActionButton component should display a single option with no parameters 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="action-button-1"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                <span
                  id="action-button-1-tooltip-target"
                />
                <div>
                  <i
                    class="material-icons mr-2"
                  >
                    refresh
                  </i>
                   Little action
                </div>
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-1"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-1-tooltip-target"
              />
              <div>
                <i
                  class="material-icons mr-2"
                >
                  refresh
                </i>
                 Little action
              </div>
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ActionButton component should display multiple options with a common parameter 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="action-button-7"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                <span
                  id="action-button-7-tooltip-target"
                />
                <div>
                  <i
                    class="material-icons mr-2"
                  >
                    refresh
                  </i>
                   Little action
                </div>
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-7"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-7-tooltip-target"
              />
              <div>
                <i
                  class="material-icons mr-2"
                >
                  refresh
                </i>
                 Little action
              </div>
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ActionButton component should display multiple options with different parameter 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="action-button-8"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                <span
                  id="action-button-8-tooltip-target"
                />
                <div>
                  <i
                    class="material-icons mr-2"
                  >
                    refresh
                  </i>
                   Little action
                </div>
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-8"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-8-tooltip-target"
              />
              <div>
                <i
                  class="material-icons mr-2"
                >
                  refresh
                </i>
                 Little action
              </div>
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ActionButton component should display multiple options without parameters 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="action-button-6"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                <span
                  id="action-button-6-tooltip-target"
                />
                <div>
                  <i
                    class="material-icons mr-2"
                  >
                    refresh
                  </i>
                   Little action
                </div>
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-6"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-6-tooltip-target"
              />
              <div>
                <i
                  class="material-icons mr-2"
                >
                  refresh
                </i>
                 Little action
              </div>
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
